style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
}

body {
  background: #659099;
  display: grid;
}

nav {
  grid-row: 1;
  grid-column: 1;
  background-color: #006475;
  border: 4px solid #0e353d;
}

nav ul {
  list-style: none;
  display: grid;
  grid-row: 1;
  font-size: 3rem;
  padding: 2rem;
  grid-template-columns: 9vw auto auto auto auto;
}

nav li {
  grid-row: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

nav img {
  width: 100px;
  height: 100px;
  padding: none;
}

nav a {
  color: white;
  text-decoration: none;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

.products-nav {
  background-color: #006321;
  border: 3px solid lightgreen;
}

.products-nav ul {
  display: grid;
  grid-row: 2;
  font-size: 2.5rem;
  padding: 1rem;
  grid-template-columns: auto;
}

.products-nav li {
  grid-row: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.products-nav a {
  color: rgb(187, 238, 187);
  text-decoration: none;
  font-family: Calibri;
}

article {
  grid-row: 3;
  background-color: #659099;
  border: 4px solid #0e353d;
  border-bottom: 2px;
}

article h2 {
  color: white;
  font-size: 5rem;
  text-align: center;
  margin: 4rem;
  font-family: Calibri;
}

article p {
  color: white;
  font-size: 2rem;
  text-align: center;
  margin: 6rem;
  font-family: Calibri;
}

.sale-article {
  grid-row: 3;
}

.fundraiser-article {
  grid-row: 4;
}

.our-mission-article {
  grid-row: 5;
}

.employee-welfare-article {
  grid-row: 6;
}

.socials-footer {
  background-color: #006475;
  border: 4px solid #0e353d;
  grid-row: 7;
}

.socials-footer ul {
  list-style: none;
  display: grid;
}

.socials-footer li {
  grid-row: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.socials-footer a {
  text-decoration: none;
  color: white;
  font-family: Calibri;
  font-size: 2rem;
  padding: 2rem;
}

.product-page-options {
  display: grid;
}

.product-page-options img {
  grid-row: 1;
  grid-column: 1;
  width: 40%;
  height: 40%;
}

